Fixed the warnings in the code.